--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -114,10 +114,20 @@
 	                </div>
 	                <div class="collapse navbar-collapse">
 	                    <ul class="nav navbar-nav navbar-right">
-	                        <li>
-	                            <a th:href="@{/logout}">
-	                                <p>Log out</p>
-	                            </a>
+	                        <li class="dropdown">
+                            	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                	<p>
+										<texto th:text="${usuario.nome}"></texto>
+										<b class="caret"></b>
+									</p>
+                              	</a>
+                              	<ul class="dropdown-menu">
+                                	<li>
+	                                	<a th:href="@{/logout}">
+			                                <p>Log out</p>
+			                            </a>
+									</li>
+                            	</ul>
 	                        </li>
 							<li class="separator hidden-lg"></li>
 	                    </ul>
