detalhe do dashboard

--- a/src/main/resources/templates/dashboard/dashboard.html
+++ b/src/main/resources/templates/dashboard/dashboard.html
@@ -9,196 +9,74 @@
 <body>
 	<div class="container-fluid" layout:fragment="conteudo">
 	    <div class="row">
-	        <div class="col-md-4">
-	            <div class="card">
-	                <div class="header">
-	                    <h4 class="title">Email Statistics</h4>
-	                    <p class="category">Last Campaign Performance</p>
-	                </div>
-	                <div class="content">
-	                    <div id="chartPreferences" class="ct-chart ct-perfect-fourth"></div>
-	                    <div class="footer">
-	                        <div class="legend">
-	                            <i class="fa fa-circle text-info"></i> Open
-	                            <i class="fa fa-circle text-danger"></i> Bounce
-	                            <i class="fa fa-circle text-warning"></i> Unsubscribe
-	                        </div>
-	                        <hr>
-	                        <div class="stats">
-	                            <i class="fa fa-clock-o"></i> Campaign sent 2 days ago
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	
-	        <div class="col-md-8">
-	            <div class="card">
-	                <div class="header">
-	                    <h4 class="title">Users Behavior</h4>
-	                    <p class="category">24 Hours performance</p>
-	                </div>
-	                <div class="content">
-	                    <div id="chartHours" class="ct-chart"></div>
-	                    <div class="footer">
-	                        <div class="legend">
-	                            <i class="fa fa-circle text-info"></i> Open
-	                            <i class="fa fa-circle text-danger"></i> Click
-	                            <i class="fa fa-circle text-warning"></i> Click Second Time
-	                        </div>
-	                        <hr>
-	                        <div class="stats">
-	                            <i class="fa fa-history"></i> Updated 3 minutes ago
-	                        </div>
-	                    </div>
-	                </div>
-	            </div>
-	        </div>
-	    </div>
-	    <div class="row">
 	        <div class="col-md-6">
 	            <div class="card ">
 	                <div class="header">
-	                    <h4 class="title">2014 Sales</h4>
-	                    <p class="category">All products including Taxes</p>
+	                    <h4 class="title">Contatos</h4>
+	                    <p class="category">Últimos contatos cadastrados</p>
 	                </div>
 	                <div class="content">
-	                    <div id="chartActivity" class="ct-chart"></div>
-	
-	                    <div class="footer">
-	                        <div class="legend">
-	                            <i class="fa fa-circle text-info"></i> Tesla Model S
-	                            <i class="fa fa-circle text-danger"></i> BMW 5 Series
-	                        </div>
-	                        <hr>
-	                        <div class="stats">
-	                            <i class="fa fa-check"></i> Data information certified
-	                        </div>
-	                    </div>
+	                    <table class="table table-hover">
+                        	<thead>
+	                            <tr>
+		                            <th>ID</th>
+		                        	<th>Nome</th>
+		                        	<th>Telefone</th>
+		                        	<th>Endereço</th>
+                        		</tr>
+                        	</thead>
+                        	<tbody>
+	                            <tr th:each="contato : ${contatos}">
+	                            	<td th:text="${contato.id}">[[ID]]</td>
+	                            	<td th:text="${contato.nome}">[[NOME]]</td>
+	                            	<td th:text="${contato.telefone}">[[TELEFONE]]</td>
+	                            	<td th:text="${contato.endereco}">[[ENDEREÇO]]</td>
+	                            </tr>
+	                            <tr th:if="${contatos.empty}">
+									<td colspan="4">Nenhum contato cadastrado</td>
+								</tr>
+                        	</tbody>
+                    	</table>
+                    	<div class="footer">
+	                       <hr>
+	                       <div class="stats">
+	                           <i class="fa fa-history"></i> <text th:text="${#lists.size(contatos)}"></text> Contas
+	              			</div>
+	                 	</div>
 	                </div>
 	            </div>
 	        </div>
 	        <div class="col-md-6">
 	            <div class="card ">
 	                <div class="header">
-	                    <h4 class="title">Tasks</h4>
-	                    <p class="category">Backend development</p>
+	                    <h4 class="title">Tarefas</h4>
+	                    <p class="category">últimas tarefas cadastradas</p>
 	                </div>
 	                <div class="content">
 	                    <div class="table-full-width">
 	                        <table class="table">
 	                            <tbody>
-	                                <tr>
-	                                    <td>
+	                                <tr th:each="tarefa : ${tarefas}">
+	                                    <td width="10">
 											<div class="checkbox">
-											  	<input id="checkbox1" type="checkbox">
-											  	<label for="checkbox1"></label>
+											  	<input th:id="@{|check${tarefa.id}|}" type="checkbox" th:checked="${tarefa.check}">
+											  	<label th:for="@{|check${tarefa.id}|}"></label>
 									  		</div>
 	                                    </td>
-	                                    <td>Sign contract for "What are conference organizers afraid of?"</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
+	                                    <td th:text="${tarefa.titulo}">[[TITULO]]</td>
 	                                </tr>
-	                                <tr>
-	                                    <td>
-											<div class="checkbox">
-											  	<input id="checkbox2" type="checkbox" checked>
-											  	<label for="checkbox2"></label>
-									  		</div>
-	                                    </td>
-	                                    <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
-	                                </tr>
-	                                <tr>
-	                                    <td>
-											<div class="checkbox">
-											  	<input id="checkbox3" type="checkbox">
-											  	<label for="checkbox3"></label>
-									  		</div>
-	                                    </td>
-	                                    <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
-	                                </tr>
-	                                <tr>
-	                                    <td>
-											<div class="checkbox">
-											  	<input id="checkbox4" type="checkbox" checked>
-											  	<label for="checkbox4"></label>
-									 		</div>
-	                                    </td>
-	                                    <td>Create 4 Invisible User Experiences you Never Knew About</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
-	                                </tr>
-	                                <tr>
-	                                    <td>
-											<div class="checkbox">
-											  	<input id="checkbox5" type="checkbox">
-											  	<label for="checkbox5"></label>
-									  		</div>
-	                                    </td>
-	                                    <td>Read "Following makes Medium better"</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
-	                                </tr>
-	                                <tr>
-	                                    <td>
-											<div class="checkbox">
-											  	<input id="checkbox6" type="checkbox" checked>
-											  	<label for="checkbox6"></label>
-									  		</div>
-	                                    </td>
-	                                    <td>Unfollow 5 enemies from twitter</td>
-	                                    <td class="td-actions text-right">
-	                                        <button type="button" rel="tooltip" title="Edit Task" class="btn btn-info btn-simple btn-xs">
-	                                            <i class="fa fa-edit"></i>
-	                                        </button>
-	                                        <button type="button" rel="tooltip" title="Remove" class="btn btn-danger btn-simple btn-xs">
-	                                            <i class="fa fa-times"></i>
-	                                        </button>
-	                                    </td>
-	                                </tr>
+		                            <tr th:if="${tarefas.empty}">
+										<td colspan="1">Nenhuma tarefa cadastrada</td>
+									</tr>
 	                            </tbody>
 	                        </table>
 	                    </div>
 	                    <div class="footer">
-	                        <hr>
-	                        <div class="stats">
-	                            <i class="fa fa-history"></i> Updated 3 minutes ago
-	                        </div>
-	                    </div>
+	                       <hr>
+	                       <div class="stats">
+	                           <i class="fa fa-history"></i> <text th:text="${#lists.size(tarefas)}"></text> Tarefas
+	              			</div>
+	                 	</div>
 	                </div>
 	            </div>
 	        </div>
