listagem e informação de contato

--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -48,52 +48,28 @@
 	            </div>
 	
 	            <ul class="nav">
-	                <li class="active">
-	                    <a href="dashboard.html">
+	                <li th:classappend="${#httpServletRequest.getRequestURI().equals('/dashboard') ? 'active' : ''}">
+	                    <a th:href="@{/dashboard}">
 	                        <i class="pe-7s-graph"></i>
 	                        <p>Dashboard</p>
 	                    </a>
 	                </li>
-	                <li>
-	                    <a href="user.html">
-	                        <i class="pe-7s-user"></i>
-	                        <p>User Profile</p>
+	                <li th:classappend="${#httpServletRequest.getRequestURI().contains('/contatos') ? 'active':''}">
+	                    <a th:href="@{/dashboard/contatos}">
+	                        <i class="pe-7s-users"></i>
+	                        <p>Contatos</p>
 	                    </a>
 	                </li>
 	                <li>
-	                    <a href="table.html">
-	                        <i class="pe-7s-note2"></i>
-	                        <p>Table List</p>
-	                    </a>
-	                </li>
-	                <li>
-	                    <a href="typography.html">
+	                    <a href="#">
 	                        <i class="pe-7s-news-paper"></i>
-	                        <p>Typography</p>
-	                    </a>
-	                </li>
-	                <li>
-	                    <a href="icons.html">
-	                        <i class="pe-7s-science"></i>
-	                        <p>Icons</p>
-	                    </a>
-	                </li>
-	                <li>
-	                    <a href="maps.html">
-	                        <i class="pe-7s-map-marker"></i>
-	                        <p>Maps</p>
-	                    </a>
-	                </li>
-	                <li>
-	                    <a href="notifications.html">
-	                        <i class="pe-7s-bell"></i>
-	                        <p>Notifications</p>
+	                        <p>Tarefas</p>
 	                    </a>
 	                </li>
 					<li class="active-pro">
-	                    <a href="upgrade.html">
-	                        <i class="pe-7s-rocket"></i>
-	                        <p>Upgrade to PRO</p>
+	                    <a href="#">
+	                        <i class="pe-7s-user"></i>
+	                        <p>Perfil</p>
 	                    </a>
 	                </li>
 	            </ul>
@@ -143,30 +119,6 @@
 	
 	        <footer class="footer">
 	            <div class="container-fluid">
-	                <nav class="pull-left">
-	                    <ul>
-	                        <li>
-	                            <a href="#">
-	                                Home
-	                            </a>
-	                        </li>
-	                        <li>
-	                            <a href="#">
-	                                Company
-	                            </a>
-	                        </li>
-	                        <li>
-	                            <a href="#">
-	                                Portfolio
-	                            </a>
-	                        </li>
-	                        <li>
-	                            <a href="#">
-	                               Blog
-	                            </a>
-	                        </li>
-	                    </ul>
-	                </nav>
 	                <p class="copyright pull-right">
 	                    &copy; <script>document.write(new Date().getFullYear())</script>
 	                </p>
