formulario de contato

--- a/src/main/resources/templates/contato/contato-list.html
+++ b/src/main/resources/templates/contato/contato-list.html
@@ -15,39 +15,70 @@
 	                    <h4 class="title">Lista de Contatos</h4>
 	                    <p class="category">Contatos cadastrados</p>
 	                </div>
-	                <div class="content">
-	                    <table class="table table-hover">
-                        	<thead>
-	                            <tr>
-		                            <th>ID</th>
-		                        	<th>Nome</th>
-		                        	<th>Telefone</th>
-		                        	<th>Endereço</th>
-		                        	<th width="10%" style="text-align: center;">Ações</th>
-                        		</tr>
-                        	</thead>
-                        	<tbody>
-	                            <tr th:each="contato : ${contatos}">
-	                            	<td th:text="${contato.id}">[[ID]]</td>
-	                            	<td>
-	                            		<a th:text="${contato.nome}" th:href="@{contatos/{id}/info(id=${contato.id})}">[[NOME]]</a>
-	                            	</td>
-	                            	<td th:text="${contato.telefone}">[[TELEFONE]]</td>
-	                            	<td th:text="${contato.endereco}">[[ENDEREÇO]]</td>
-	                            	<td style="text-align: center;">
-	                            		<button type="button" rel="tooltip" title="" class="btn btn-info btn-simple btn-xs" data-original-title="Editar">
-                                            <i class="fa fa-edit"></i>
-                                        </button>
-                                        <button type="button" rel="tooltip" title="" class="btn btn-danger btn-simple btn-xs" data-original-title="Remover">
-                                            <i class="fa fa-times"></i>
-                                        </button>
-	                            	</td>
-	                            </tr>
-	                            <tr th:if="${contatos.empty}">
-									<td colspan="4">Nenhum contato cadastrado</td>
-								</tr>
-                        	</tbody>
-                    	</table>
+	                <div class="content" id="contatos">
+	                	<div class="row">
+	                		<div class="col-md-12 pull-right">
+	                			<a id="filtrobtn" class="btn btn-fill btn-default">Filtro <i class="fa fa-filter" aria-hidden="true"></i> </a>
+	                			<a th:href="@{/dashboard/contatos/novo}" class="btn btn-fill btn-info">Novo <i class="fa fa-plus" aria-hidden="true"></i> </a>
+	                		</div>
+	                	</div>
+	                	
+	                	<div th:if="${!#strings.isEmpty(mensagem)}">
+	                		<br>
+		                	<div class="alert alert-success">
+		                		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+									
+								<div>
+									<i class="fa fa-check-circle"></i>
+									<span th:text="${mensagem}">[[MENSAGEM SUCESSO]]</span>
+								</div>
+							</div>
+						</div>
+	                	
+	                	<div class="row filtrocampo">
+	                		<br>
+	                		<div class="col-md-12">
+	                			<input class="form-control search" placeholder="Pesquisar">
+	                		</div>
+	                		<br>
+	                	</div>
+	                    
+	                    <div class="list">
+		                    <table class="table table-hover">
+	                        	<thead>
+		                            <tr>
+			                            <th>ID</th>
+			                        	<th>Nome</th>
+			                        	<th>Telefone</th>
+			                        	<th>Endereço</th>
+			                        	<th width="10%" style="text-align: center;">Ações</th>
+	                        		</tr>
+	                        	</thead>
+	                        	<tbody>
+		                            <tr th:each="contato : ${contatos}">
+		                            	<td th:text="${contato.id}">[[ID]]</td>
+		                            	<td>
+		                            		<a class="nome" th:text="${contato.nome}" th:href="@{/dashboard/contatos/{id}/info(id=${contato.id})}">[[NOME]]</a>
+		                            	</td>
+		                            	<td><p th:text="${contato.telefone}" class="telefone">[[TELEFONE]]</p></td>
+		                            	<td><p th:text="${contato.endereco}" class="endereco">[[ENDEREÇO]]</p></td>
+		                            	<td style="text-align: center;">
+		                            		<a th:href="@{/dashboard/contatos/editar/{id}(id=${contato.id})}" rel="tooltip" title="" class="btn btn-info btn-simple btn-xs" data-original-title="Editar">
+	                                            <i class="fa fa-edit"></i>
+	                                        </a>
+	                                        <a th:attr="onclick = ${'modalRemover('+contato.id+')'}" rel="tooltip" title="" class="btn btn-danger btn-simple btn-xs" data-original-title="Remover">
+	                                            <i class="fa fa-times"></i>
+	                                        </a>
+		                            	</td>
+		                            </tr>
+		                            <tr th:if="${contatos.empty}">
+										<td colspan="4">Nenhum contato cadastrado</td>
+									</tr>
+	                        	</tbody>
+	                    	</table>
+                    	</div>
                     	<div class="footer">
 	                       <hr>
 	                       <div class="stats">
@@ -58,6 +89,47 @@
 	            </div>
 	        </div>
 	    </div>
-	</div>   	
+	</div>
+	
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  		<div class="modal-dialog" role="document">
+	    	<div class="modal-content">
+	      		<div class="modal-header">
+	        		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        		<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+	      		</div>
+	      		<div class="modal-body">
+	        		...
+	      		</div>
+	      		<div class="modal-footer">
+	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        		<button type="button" class="btn btn-primary">Save changes</button>
+	      		</div>
+	    	</div>
+	  	</div>
+	</div>
+	
+	<th:block layout:fragment="script">
+   		<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
+       	<script>
+          	$(document).ready(function() {
+          		var div = $('.filtrocampo').hide();
+          		
+          	    $('#filtrobtn').click(function () {
+          	        div.toggle();
+          	    });
+
+          		var options = {
+   			  		valueNames: ['nome', 'telefone', 'endereco']
+      			};
+          		
+  				var monkeyList = new List('contatos', options);
+  			});
+          	
+          	function modalRemover(id){
+          		$('#myModal').modal('toggle');
+      	    };
+   		</script>
+	</th:block>
 </body>
 </html>
