--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -29,6 +29,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/pe-icon-7-stroke.css}" />
+    
 </head>
 <body>
 
@@ -143,5 +144,6 @@
 	<!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
 	<script th:src="@{/assets/js/demo.js}"></script>
 	
+	<th:block layout:fragment="script"></th:block>
 </body>
 </html>
