exclusão de contato e melhora na listagem de contato

--- a/src/main/resources/templates/base/layout.html
+++ b/src/main/resources/templates/base/layout.html
@@ -30,6 +30,8 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'/>
     <link rel="stylesheet" type="text/css" th:href="@{/assets/css/pe-icon-7-stroke.css}" />
     
+    <!-- SWEET ALERT -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -131,6 +133,9 @@
 	<!--   Core JS Files   -->
 	<script th:src="@{/assets/js/jquery.3.2.1.min.js}" type="text/javascript"></script>
 	<script th:src="@{/assets/js/bootstrap.min.js}" type="text/javascript"></script>
+	
+	<!-- SWEET ALERT -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-sweetalert/1.0.1/sweetalert.min.js" type="text/javascript"></script>
 	
 	<!--  Charts Plugin -->
 	<script th:src="@{/assets/js/chartist.min.js}"></script>
