--- a/src/main/resources/templates/contato/contato-form.html
+++ b/src/main/resources/templates/contato/contato-form.html
@@ -54,7 +54,11 @@
 	                             </div>
 	                    	</div>
 	                    	
-	                    	<button type="submit" class="btn btn-success btn-fill pull-right">Salvar</button>
+	                    	<div class="pull-right">
+		                    	<a th:href="@{/dashboard/contatos}" class="btn btn-default btn-fill">Voltar</a>
+		                    	<button type="submit" class="btn btn-success btn-fill">Salvar</button>
+	                    	</div>
+	                    	
 	                        <div class="clearfix"></div>
 	                	</form>
 	                </div>
