--- a/src/main/resources/templates/contato/contato-info.html
+++ b/src/main/resources/templates/contato/contato-info.html
@@ -37,6 +37,12 @@
                                  </div>
                              </div>
                     	</div>
+                    	
+                    	<div class="pull-right">
+	                    	<a th:href="@{/dashboard/contatos}" class="btn btn-default btn-fill">Voltar</a>
+                    	</div>
+                    	
+                        <div class="clearfix"></div>
 	                </div>
 	            </div>
 	        </div>
