--- a/src/main/resources/templates/contato/contato-list.html
+++ b/src/main/resources/templates/contato/contato-list.html
@@ -25,7 +25,7 @@
 	                	
 	                	<div th:if="${!#strings.isEmpty(mensagem)}">
 	                		<br>
-		                	<div class="alert alert-success">
+		                	<div th:class="${'alert alert-' + tipo}">
 		                		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
 									<span aria-hidden="true">&times;</span>
 								</button>
@@ -36,16 +36,16 @@
 								</div>
 							</div>
 						</div>
-	                	
-	                	<div class="row filtrocampo">
-	                		<br>
-	                		<div class="col-md-12">
-	                			<input class="form-control search" placeholder="Pesquisar">
-	                		</div>
-	                		<br>
-	                	</div>
 	                    
-	                    <div class="list">
+	                    <div>
+	                    	<br>
+	                    	<div class="row filtrocampo">
+		                		<div class="col-md-12">
+		                			<input class="form-control search" placeholder="Pesquisar">
+		                		</div>
+		                		<br>
+	                		</div>
+	                	
 		                    <table class="table table-hover">
 	                        	<thead>
 		                            <tr>
@@ -56,21 +56,29 @@
 			                        	<th width="10%" style="text-align: center;">Ações</th>
 	                        		</tr>
 	                        	</thead>
-	                        	<tbody>
+	                        	<tbody class="list">
 		                            <tr th:each="contato : ${contatos}">
 		                            	<td th:text="${contato.id}">[[ID]]</td>
 		                            	<td>
-		                            		<a class="nome" th:text="${contato.nome}" th:href="@{/dashboard/contatos/{id}/info(id=${contato.id})}">[[NOME]]</a>
+		                            		<a th:text="${contato.nome}" class="nome" th:href="@{/dashboard/contatos/{id}/info(id=${contato.id})}">[[NOME]]</a>
 		                            	</td>
 		                            	<td><p th:text="${contato.telefone}" class="telefone">[[TELEFONE]]</p></td>
 		                            	<td><p th:text="${contato.endereco}" class="endereco">[[ENDEREÇO]]</p></td>
 		                            	<td style="text-align: center;">
-		                            		<a th:href="@{/dashboard/contatos/editar/{id}(id=${contato.id})}" rel="tooltip" title="" class="btn btn-info btn-simple btn-xs" data-original-title="Editar">
-	                                            <i class="fa fa-edit"></i>
-	                                        </a>
-	                                        <a th:attr="onclick = ${'modalRemover('+contato.id+')'}" rel="tooltip" title="" class="btn btn-danger btn-simple btn-xs" data-original-title="Remover">
-	                                            <i class="fa fa-times"></i>
-	                                        </a>
+	                                        <form method="POST"
+												th:onsubmit="'return confirm(\'Posso remover ' + ${contato.nome} + '?\');'"
+												th:action="@{/dashboard/contatos/{id}(id=${contato.id})}">
+												
+												<input type="hidden" name="_method" value="DELETE" />
+												
+												<a th:href="@{/dashboard/contatos/editar/{id}(id=${contato.id})}" rel="tooltip" title="" class="btn btn-info btn-simple" data-original-title="Editar">
+		                                            <i class="fa fa-edit"></i>
+		                                        </a>
+		                                        
+		                                        <button type="submit" rel="tooltip" title="" class="btn btn-danger btn-simple" data-original-title="Remover">
+		                                            <i class="fa fa-times"></i>
+		                                        </button>
+	                                        </form>
 		                            	</td>
 		                            </tr>
 		                            <tr th:if="${contatos.empty}">
@@ -78,57 +86,62 @@
 									</tr>
 	                        	</tbody>
 	                    	</table>
+	                    	
+	                    	<div id="myModal" class="modal fade" role="dialog">
+						  		<div class="modal-dialog">
+							    	<div class="modal-content">
+							      		<div class="modal-header">
+							        		<button type="button" class="close" data-dismiss="modal">&times;</button>
+							        		<h4 class="modal-title">Exclusão de Contato</h4>
+							      		</div>
+							      		<form th:action="@{/dashboard/contatos/}" method="post">
+							      			<input type="hidden" name="_method" value="DELETE" />
+							      			<!--  <input type="hidden" id="idContato" name="id" value="0"/>	-->						      			
+								      		<div class="modal-body">
+								        		<p>Esta opção não pode ser desfeita, deseja realmente excluir este contato?</p>
+								      		</div>
+									      	<div class="modal-footer">
+									        	<a class="btn btn-default btn-fill" data-dismiss="modal">Cancelar</a>
+									        	<button type="submit" class="btn btn-danger btn-fill">Excluir</button>
+									      	</div>
+								      	</form>
+								    </div>
+							  	</div>
+							</div>
+
                     	</div>
                     	<div class="footer">
 	                       <hr>
-	                       <div class="stats">
-	                           <i class="fa fa-history"></i> <text th:text="${#lists.size(contatos)}"></text> Contatos
-	              			</div>
+	                       <ul class="pagination"></ul>
 	                 	</div>
 	                </div>
 	            </div>
 	        </div>
 	    </div>
 	</div>
-	
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  		<div class="modal-dialog" role="document">
-	    	<div class="modal-content">
-	      		<div class="modal-header">
-	        		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        		<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-	      		</div>
-	      		<div class="modal-body">
-	        		...
-	      		</div>
-	      		<div class="modal-footer">
-	        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        		<button type="button" class="btn btn-primary">Save changes</button>
-	      		</div>
-	    	</div>
-	  	</div>
-	</div>
-	
+
 	<th:block layout:fragment="script">
    		<script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.5.0/list.min.js"></script>
        	<script>
           	$(document).ready(function() {
+          		
           		var div = $('.filtrocampo').hide();
           		
           	    $('#filtrobtn').click(function () {
           	        div.toggle();
           	    });
-
-          		var options = {
-   			  		valueNames: ['nome', 'telefone', 'endereco']
-      			};
-          		
-  				var monkeyList = new List('contatos', options);
+  				
+				var userList = new List('contatos', {
+					valueNames: ['nome', 'telefone', 'endereco'],
+					  page: 10,
+					  pagination: true
+				});
   			});
           	
-          	function modalRemover(id){
-          		$('#myModal').modal('toggle');
-      	    };
+          	function excluir(id){
+          		$("#idContato").val(id);
+          		$('#myModal').appendTo("body").modal('show');
+          	}
    		</script>
 	</th:block>
 </body>
